--- a/package.json
+++ b/package.json
@@ -3,22 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server -w server/db.json --port 3004",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@svgr/webpack": "^6.5.1",
+    "axios": "^1.1.3",
+    "classnames": "^2.3.2",
+    "json-server": "^0.17.1",
     "next": "12.3.1",
+    "node-sass": "^7.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
+    "react-redux-toastr": "^7.6.10",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.26.0",
+    "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "prettier": "^2.7.1",
+    "typescript": "4.3.2"
   }
 }
